--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "CloudAPI"]
-	path = CloudAPI
-	url = https://github.com/ms301/CloudAPI.git
-[submodule "CloudRest"]
-	path = CloudRest
-	url = https://github.com/rareMaxim/CloudRest.git
+[submodule "Citrus"]
+	path = Citrus
+	url = https://github.com/rareMaxim/Citrus.git
